# MobileDeParser

./: .dockerignore  .gitignore  PROJECT_DOCUMENTATION.md  QUICK_START.md  README.md  TECHNICAL_MANUAL.md  main.py  prompt.txt  proxies_example.txt  pyproject.toml  test.py
bot/: bot.py
bot/handlers/: commands.py
bot/middleware/: middleware.py
bot/models/: __init__.py  bot_config.py  parser_status.py  parsing_progress.py  parsing_result.py
bot/services/: parser_manager.py  progress_tracker.py
bot/utils/: lifecycle.py
core/models/: product_model.py
core/parsers/: base_parser.py  mobilede_ru_parser.py
core/services/: parser_service.py  scheduler_service.py
docker/: Dockerfile
models/: config_model.py
scripts/: mobilede_bot.service  mobilede_check.sh  mobilede_configwatch.path  mobilede_configwatch.service  mobilede_docker_restart.sh  mobilede_docker_start.sh  mobilede_docker_stop.sh  mobilede_restart.sh  mobilede_setup.sh  setup.bat  setup.sh  test_image_exclusions.py  universal_mobilede_setup.sh  watchdog.sh
services/: logger.py
shared/config/: config.py  config_model.py
shared/exceptions/: html_exceptions.py  model_exceptions.py  request_exceptions.py
shared/models/: database_model.py
shared/services/: database_service.py  http_client.py  logger.py  openrouter_service.py
shared/utils/: generate_headers.py  generate_links.py  html_parser.py  proxy_manager.py  storage_management.py
utils/: config.py
