[project]
name = "mobilede"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]
